Revision history for Dist-Zilla-Role-ModuleIncluder

{{$NEXT}}
          - Handle encodings correctly
          - Convert to File::Slurper

0.004     2013-11-12 18:01:09 Europe/Amsterdam
          Switch from File::Slurp to File::Slurp::Tiny

0.003     2013-08-17 13:51:40 Europe/Amsterdam
          Fix precedence issue in return … and …
          Don't rescan on increased module dependency

0.002     2012-03-31 17:42:47 Europe/Amsterdam
          Added corpus/ to no_index

0.001     2012-03-31 17:07:36 Europe/Amsterdam
          Initial release